# file

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
docs/: ai-agent-skills.md  development-roadmap-next.md  hermes-gateway-integration.md  message-gateway.md  production-refactor-plan.md
examples/: v0.1-sample-project.json
local-service/: dataSource.ts
local-service/server/: gateway-adapter.mjs  http.ts
scripts/: start-message-gateway.ps1
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: alerts.rs  assets.rs  governance.rs  mod.rs  rooms.rs  settings.rs
src-tauri/src/db/: mod.rs  seed.rs
src-tauri/src/db/migrations/: 0001_init.sql  0002_operational_agent_data.sql  0003_unified_backend_governance.sql
src-tauri/src/export/: mod.rs  project_json.rs
src-tauri/src/models/: mod.rs
src/app/: router.ts  theme.ts
src/app/layout/: AppShell.vue  SideNav.vue  (+1 more)
src/components/: ChervonLogo.vue  PaginationControls.vue  TableColumnSettings.vue
src/constants/: categories.ts  colors.ts  statuses.ts
src/services/: pagination.ts
src/stores/: aiStore.ts  alertStore.ts  appStore.ts  assetStore.ts  authStore.ts  roomStore.ts
src/styles/: global.css  tokens.css
src/types/: ai.ts  aiNavigation.ts  domain.ts  import.ts
templates/: v0.1-device-import-template.xlsx
tests/smoke/: ai-smoke.spec.ts  app-smoke.spec.ts  asset-smoke.spec.ts  auth-smoke.spec.ts  helpers.ts
(+223 files in other folders)
