[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Quanfeng AI DCIM Contributors"]
license = "Apache-2.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono", "uuid", "json"] }
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }
